--- a/paper-1-lr-slr/lr-slr-glass.Rmd
+++ b/paper-1-lr-slr/lr-slr-glass.Rmd
@@ -19,9 +19,6 @@ bibliography: mybibfile.bib
 output: rticles::elsevier_article
 ---
 
-_Text based on elsarticle sample manuscript, see [http://www.elsevier.com/author-schemas/latex-instructions#elsarticle](http://www.elsevier.com/author-schemas/latex-instructions#elsarticle)_
-
-
 # Introduction
 
 - Begin with a short discussion about *Likelihood ratio as weight of forensic evidence: a closer look* [@lundiyer17] 
@@ -29,14 +26,12 @@ _Text based on elsarticle sample manuscript, see [http://www.elsevier.com/author
     * Range of LRs given, but not a distribution.
     * Within the range, some LRs are going to be more likely than others 
 - Moving in a different direction 
-    * Don't look at the data first 
-    * Use only knowledge about the problem to select range of possible distributions 
-    * Define the constraints you wish to place on the distribution of CDFs (or on CDFs themselves?)
-    * Use Dirichlet Process priors to get a range of plausible values
+    * Use diffuse Dirichlet Process priors 
+    * with enough data, can go straight to the posterior DP(n, $\hat{F}_n$) [@draper17]
 - Specific application(s)
     * Come up with range of plausible LRs for RI values in glass data:
-        * What is the distribution of RI in glass from the same pane? 
-        * What is the distribution of RI in all glass from the relevant population? 
+        * distribution for pane means 
+        * distribution for measurements within a pane 
     * (Maybe) Range of plausible SLRs for RF scores for element concentrations in glass data
         * What is the distribution of scores for known mates? 
         * What is the distribution of scores for known non-mates? 
@@ -46,17 +41,14 @@ _Text based on elsarticle sample manuscript, see [http://www.elsevier.com/author
 - Motivation: 
     * Bayesian way
     * Know very little about the shape, family, etc of the distribution
-    * Simulate random CDFs from many priors
-    * Check that they fit a set of constraints
-    * Obtain posterior distribution of CDFs to get interval of plausible values of interest
+    * Go straight to the posterior: Obtain posterior distribution of CDFs to get interval of plausible values of interest
 - Theory: 
     * A little bit about what Dirichlet Process Priors are 
     * Not too technical for a forensic science audience
     * Stick breaking procedure
-    * Size of M dictates how much to weigh data vs. base measure in the posterior 
-    * Posterior: pick a random data point or pick a random value from the base measure 
+    * Let M go to zero. When data are large, M is small, the posterior distribution converges to almost bootstrap
 - Application: 
-    * Computer simulation: pick many Ms, base distributions, bounds/constraints.
+    * Computer simulation from the posterior.
     * Approximation 
     * Mention the `dprocsim` package 
 
@@ -67,8 +59,16 @@ _Text based on elsarticle sample manuscript, see [http://www.elsevier.com/author
 Refractive Index (RI) is a measurment of how light bends through a medium. In @evett77, @lambertevett84 and others RI is suggested as a method to determine if recovered glass fragments could have come from a known source of glass, such as a broken window at a crime scene. 
 
 
-Two distributions, (1) RI for glass from the same pane, [@evett77] (2) RI for glass from different panes [@lambertevett84]
+Two scenarios, (1) RI for glass from the same pane, [@evett77] (2) RI for glass from different panes [@lambertevett84]
 
+What are the distributions of interest: 
+
+1. distribution of the mean/median RI values in a pane. The population distribution of these means is of interest. 
+2. distribution of the RI values within one pane of glass. 
+
+Quantity of Interest: 
+
+$$LR = \frac{\int_{\Theta} f(x,y | \theta) g(\theta) d\theta}{\int_{\Theta} f(x | \theta) g(\theta) d\theta \times \int_{\Theta} f(y | \theta) g(\theta) d\theta}$$
 
 
 - What is previously known about glass data from Evett paper and others? 
