--- a/paper-1-lr-slr/mybibfile.bib
+++ b/paper-1-lr-slr/mybibfile.bib
@@ -60,3 +60,21 @@
         volume = "13",
         year = "2019"
 }
+
+
+@Article{draper17,
+        AUTHOR = {Terenin, Alexander and Draper, David},
+        TITLE = {A Noninformative Prior on a Space of Distribution Functions},
+        JOURNAL = {Entropy},
+        VOLUME = {19},
+        YEAR = {2017},
+        NUMBER = {8},
+        ARTICLE-NUMBER = {391},
+        URL = {https://www.mdpi.com/1099-4300/19/8/391},
+        ISSN = {1099-4300},
+        ABSTRACT = {In a given problem, the Bayesian statistical paradigm requires the specification of a prior distribution that quantifies relevant information about the unknowns of main interest external to the data. In cases where little such information is available, the problem under study may possess an invariance under a transformation group that encodes a lack of information, leading to a unique prior—this idea was explored at length by E.T. Jaynes. Previous successful examples have included location-scale invariance under linear transformation, multiplicative invariance of the rate at which events in a counting process are observed, and the derivation of the Haldane prior for a Bernoulli success probability. In this paper we show that this method can be extended, by generalizing Jaynes, in two ways: (1) to yield families of approximately invariant priors; and (2) to the infinite-dimensional setting, yielding families of priors on spaces of distribution functions. Our results can be used to describe conditions under which a particular Dirichlet Process posterior arises from an optimal Bayesian analysis, in the sense that invariances in the prior and likelihood lead to one and only one posterior distribution.},
+        DOI = {10.3390/e19080391}
+}
+
+
+
