--- a/paper-1-lr-slr/mybibfile.bib
+++ b/paper-1-lr-slr/mybibfile.bib
@@ -76,5 +76,18 @@
         DOI = {10.3390/e19080391}
 }
 
+@article{bennettglass,
+        title = "Spatial variation of refractive index in a pane of float glass",
+        journal = "Science & Justice",
+        volume = "43",
+        number = "2",
+        pages = "71 - 76",
+        year = "2003",
+        issn = "1355-0306",
+        doi = "https://doi.org/10.1016/S1355-0306(03)71746-8",
+        url = "http://www.sciencedirect.com/science/article/pii/S1355030603717468",
+        author = "R.L. Bennett and N.D. Kim and J.M. Curran and S.A. Coulson and A.W.N. Newton",
+        keywords = "Forensic science, criminalistics, glass, refractive index, statistics, variation"
+}
 
 
