--- a/paper-1-lr-slr/mybibfile.bib
+++ b/paper-1-lr-slr/mybibfile.bib
@@ -46,6 +46,15 @@
         year = "2010"
 }
 
+
+@Manual{curranpkg,
+    title = {dafs: Data analysis for forensic scientists},
+    author = {James Curran and Danny Chang},
+    year = {2012},
+    note = {R package version 1.0-37},
+    url = {https://CRAN.R-project.org/package=dafs},
+  }
+
 @article{park19,
         author = "Soyoung Park and Alicia Carriquiry",
         doi = "10.1214/18-AOAS1211",
